Exo 1 : Les 4 saisons

--- a/src/index.html
+++ b/src/index.html
@@ -9,3 +9,8 @@
     <script type="module" src="index.js"></script>
   </body>
 </html>
+
+<!--
+ Support de cours : https://ctrl-up.slite.com/p/note/YLmIAIk68BzPw1Nkbcgl7_
+ datefns
+-->
